# consig-bot

./: .gitignore  BUILD_WINDOWS.md  README.md  config.example.json  executar.bat  main.py  pyinstaller.spec  pyproject.toml  requirements.txt
.claude/: .detect-cache.json  .knowledge-seen.json  knowledge.json
.claude/.agent-state/: debug-loop-state.json
.claude/.metrics/: bash-native-redirect.jsonl  model-routing-gate.jsonl
.claude/.pipeline-states/: 2026-05-09-bib-bot.metrics.json  2026-05-09-consig-bot-bootstrap.metrics.json  2026-05-12-saec-consiglog-bot.metrics.json  2026-05-13-econsig-bot.metrics.json
.claude/commands/: guards.md  notes.md  patterns.md  recipes.md  stack.md
.claude/skills/bot-authoring/: SKILL.md
.claude/spec/completed/2026-05-09-bib-bot/: spec.md
.claude/spec/completed/2026-05-09-consig-bot-bootstrap/: spec.md
.github/workflows/: build-windows.yml
app/: __init__.py  __main__.py
app/bots/: __init__.py
app/bots/bib/: bot.py  parsers.py  schema.py  selectors.py
app/bots/consiglog/: bot.py  parsers.py  schema.py  selectors.py
app/bots/econsig/: bot.py  parsers.py  schema.py  selectors.py
app/bots/valor/: bot.py  parsers.py  schema.py  selectors.py
app/cli/: menu.py  progress.py
app/core/: base_bot.py  browser.py  exceptions.py  page_state.py  pipeline.py  registry.py  retry.py
app/models/: config.py  input_row.py  result.py
app/services/: captcha_solver.py  checkpoint.py  excel_reader.py  excel_writer.py  proxy_provider.py
app/utils/: cpf.py  dates.py  logger.py  paths.py  screenshots.py
(+2 files in other folders)
